fix dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -177,3 +177,6 @@ ul > li > a {
   margin-top: 5% !important;
   margin-bottom: 15% !important;
 }
+.modal-favorite {
+  color: var(--dark-back);
+}
